--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,7 +2,7 @@ footer {
     text-align: center;
     height: 40px;
     line-height: 40px;
-    background-color: silver;
+    background-color: #2ecc71;
     z-index: 0;
     margin: 0px;
 }
