--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,14 +2,19 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:#2ecc71;
     text-align: center;
-    line-height: 40px;
+    line-height: 30px;
+    -webkit-box-shadow: 0px -1px 5px 5px rgba(23,23,23,0.35); 
+    box-shadow: 0px -1px 5px 5px rgba(23,23,23,0.35);
 }
 
 h1 {
-    color: black;
-    font-size: 20px;
+    color: white;
+    background-color: #2ecc71;
+    font-size: 18px;
+    width: 200px;
+    margin: 10px;
+    border-radius: 2px;
 }
 
 h1:hover {
@@ -24,11 +29,14 @@ nav {
 }
 
 a {
-    font-size: 20px;
+    font-size: 14px;
     list-style: none;
-    width: 200px;
-    color: black;
+    width: 150px;
+    background-color: #FFBF00 ;
+    color: whitesmoke;
     text-align: center;
+    margin: 10px;
+    border-radius: 5px;
 }
 
 a:hover {
