--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,48 +1,58 @@
-div {
+.homeDiv {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    color: silver;
-    height: 630px;
+    color: black;
+    height: 600px;
+    width: 800px;
+    position: relative;
+    margin: auto;
 }
 
-div p {
+.homeDiv p {
     margin: 10px;
 }
 
 ul {
+    z-index: 0;
     display: flex;
     list-style: none;
-    padding-bottom: 10px;
+    margin-top: 10px;
+
 }
 
-ul li {
-    padding: 10px;
+li {
+    width: 500px;
+    padding: 5px;
+    background-color: whitesmoke;
+    border: 1px solid grey;
+    border-radius: 2px;
+    outline: whitesmoke;
 }
 
 .mapDiv {
     overflow: visible;
+    z-index: 1;
+    margin-top: 10px;
 }
 
 .map {
-    position: relative;
     width: 700px;
     border: 1px solid silver;
     transition: 0.4s;
-    z-index: 1;
 }
 
 .map:hover {
-    transform: scale(1.49);
+    transform: scale(1.2);
 }
 
 h1 {
-    font-size: 20px;
-    color: silver;
-    border: 2px solid silver;
+    font-size: 16px;
+    color: whitesmoke;
+    background-color: #FFBF00;
+    border-radius: 5px;
     padding: 10px;
-    width: 860px;
 }
 
 h1:hover {
