--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="homeDiv">
     <h1>Please Register or Login to Create Character</h1>
 
     <p>
@@ -27,6 +27,4 @@
     <div class="mapDiv">
         <img src="https://i.imgur.com/APW3sDx.png" alt="" class="map"/>
     </div>
-
-    <p>Map of the Realms</p>
 </div>
