--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica&display=swap');
+
 body {
-    background-color: black;
+    font-family: 'IM Fell DW Pica', serif;
+    background-color: #EEF0F1;
 }
 
 * {
