--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,3 +1,61 @@
-div {
+.homeDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: black;
+    height: 600px;
+    width: 800px;
+    position: relative;
+    margin: auto;
     padding: 10px;
+}
+
+.homeDiv p {
+    margin: 10px;
+}
+
+ul {
+    z-index: 0;
+    display: flex;
+    list-style: none;
+    margin-top: 10px;
+
+}
+
+li {
+    width: 500px;
+    padding: 5px;
+    background-color: whitesmoke;
+    border: 1px solid grey;
+    border-radius: 2px;
+    outline: whitesmoke;
+}
+
+.mapDiv {
+    overflow: visible;
+    z-index: 1;
+    margin-top: 10px;
+}
+
+.map {
+    width: 700px;
+    border: 1px solid silver;
+    transition: 0.4s;
+}
+
+.map:hover {
+    transform: scale(1.2);
+}
+
+h1 {
+    font-size: 16px;
+    color: whitesmoke;
+    background-color: #FFBF00;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+h1:hover {
+    cursor: pointer;
 }
