--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,11 @@
 footer {
+    position: fixed;
+    bottom: 0px;
     text-align: center;
     height: 40px;
+    width: 100%;
     line-height: 40px;
-    background-color: #2ecc71;
+    background-color: #6ada98;
     z-index: 0;
     margin: 0px;
 }
