--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,13 +4,12 @@ header {
     align-items: center;
     text-align: center;
     line-height: 30px;
-    -webkit-box-shadow: 0px -1px 5px 5px rgba(23,23,23,0.35); 
-    box-shadow: 0px -1px 5px 5px rgba(23,23,23,0.35);
+    outline: 1px solid rgb(173, 172, 172);
+    background-color: #75eea7 ;
 }
 
 h1 {
     color: white;
-    background-color: #2ecc71;
     font-size: 18px;
     width: 200px;
     margin: 10px;
@@ -29,11 +28,9 @@ nav {
 }
 
 a {
-    font-size: 14px;
-    list-style: none;
+    font-size: 16px;
     width: 150px;
-    background-color: #FFBF00 ;
-    color: whitesmoke;
+    color: white;
     text-align: center;
     margin: 10px;
     border-radius: 5px;
@@ -41,4 +38,9 @@ a {
 
 a:hover {
     cursor: pointer;
+}
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
 }
