--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
-    <h1>The Universe of All</h1>
+    <h1 routerLink="/">The Universe of All</h1>
     <nav>
-            <a>Register</a>
+            <a routerLink="/register">Register</a>
             <a>Logout</a>
             <a>Adventures</a>
             <a>xxx's Characters</a>
