--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,30 @@
-<div>
-    <app-home></app-home>
-    <app-register></app-register>
-    <app-login></app-login>
+<div class="homeDiv">
+    <h1>Please Register or Login to Create Character</h1>
+
+    <p>
+        A cosmic entity beyond mortal imagination, refered simply by the wise as All, is said to be the creator of
+        everything there was, is and will be. In the universe there are 2 realms. Each is home to a unique magical
+        energy that defines its features, structure and inhabitants.
+    </p>
+
+    <ul>
+        <li>
+            <strong>Astarian, Realm of Darkness</strong>
+            <br />Under the glow of its thousand stars, Astarian is home to many dark dwellers.
+            Home realm of the Giants. Astarian's denizens are uniquely adapted for survival.
+            It is home to the powerful arcane energy known as Weave.
+        </li>
+
+        <li>
+            <strong>Irian, Realm of Light</strong>
+            <br />In contrast to Astarian, Irian is a realm of unending light,
+            illuminated by a single bright sentient being, Soneon, the Solar Vortex.
+            Its lands are as harsh and unforgiving as its native Dragons.
+            Denizens wield the mystical magic known as Force.
+        </li>
+    </ul>
+
+    <div class="mapDiv">
+        <img src="https://i.imgur.com/APW3sDx.png" alt="" class="map"/>
+    </div>
 </div>
