--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,7 +6,7 @@ div {
     height: 300px;
     border: 2px solid silver;
     padding: 30px 30px 0px 30px;
-    color: black;
+    color: white;
 }
 
 h2 {
