--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<img src="https://i.imgur.com/ewEdwNk.jpg" alt="" class="asideImgOne" />
+<img src="https://i.imgur.com/cYlyXOZ.jpg" alt="" class="asideImgTwo" />
 <app-footer></app-footer>
