--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,7 +5,8 @@ footer {
     height: 40px;
     width: 100%;
     line-height: 40px;
-    background-color: #6ada98;
+    color: white;
+    background-color: #006eff;
     z-index: 0;
     margin: 0px;
 }
