--- a/src/app/race-select/race-select.component.html
+++ b/src/app/race-select/race-select.component.html
@@ -49,7 +49,7 @@
         </div>
 
         <div>
-            <img src="https://i.imgur.com/LeQtQM3.png" alt="" class="raceImg"}"/>
+            <img src="https://i.imgur.com/LeQtQM3.png" alt="" class="raceImg"/>
         </div>
 
         <div>
