--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <nav>
             <a routerLink="/register">Register</a>
             <a>Logout</a>
-            <a>Adventures</a>
-            <a>xxx's Characters</a>
+            <a routerLink="/adventures">Adventures</a>
+            <a routerLink="/my-characters">xxx's Characters</a>
     </nav>
 </header>
