Added Firebase AuthService

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <h1 routerLink="/">The Universe of All</h1>
     <nav>
             <a routerLink="/register">Register</a>
-            <a>Logout</a>
+            <a (click)="signOut()">Logout</a>
             <a routerLink="/adventures">Adventures</a>
             <a routerLink="/my-characters">xxx's Characters</a>
     </nav>
