--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -49,7 +49,7 @@ li {
 h1 {
     font-size: 16px;
     color: whitesmoke;
-
+    background-color: #ff9100;
     border-radius: 5px;
     padding: 10px;
 }
