--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,18 +1,18 @@
 <div>
     <h2>Register</h2>
-    <form action="">
+    <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
         <label htmlFor="email">Email:</label>
-        <input type="email" name="email" />
+        <input type="email" name="email" (ngModel)="email" required />
         <label htmlFor="password">Password:</label>
-        <input type="password" name="password" />
+        <input type="password" name="password" (ngModel)="password" />
         <label htmlFor="repeatPassword">Confirm Password:</label>
-        <input type="password" id="repeatPassword" name="repeatPassword" />
-        <input type="submit" id="registerbtn" name="registerbtn" value="Register"/>
+        <input type="password" id="repeatPassword" name="repeatPassword" (ngModel)="repeatPassword" />
+        <input type="submit" id="registerbtn" name="registerbtn" [disabled]="!formData.valid" value="Register" class="registerBtn"/>
     </form>
 
     <h3>If you already have an account</h3>
-        <button class="linkToLoginBtn">
-            Sign In
-        </button>
+    <button class="linkToLoginBtn">
+        Sign In
+    </button>
 
 </div>
