--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,6 @@
         <input type="email" name="email" (ngModel)="email" required/>
         <label htmlFor="password">Password:</label>
         <input type="password" name="password" (ngModel)="password" required/>
-        <input type="submit" id="loginbtn" name="loginbtn" value="Login" [disabled]="!formData.valid"/>
+        <input type="submit" id="loginbtn" name="loginbtn" value="Login" [disabled]="!formData.valid" class="loginBtn"/>
     </form>
 </div>
