--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,8 +11,6 @@
     </form>
 
     <h3>If you already have an account</h3>
-    <button class="linkToLoginBtn">
-        Sign In
-    </button>
+    <button class="linkToLoginBtn" routerLink="/login">Sign In</button>
 
 </div>
