--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -29,6 +29,7 @@ li {
     color: white;
     background-color: #242526;
     border: 1px solid rgb(92, 92, 92);
+    border-radius: 4px;
 }
 
 .mapDiv {
@@ -46,14 +47,16 @@ li {
     transform: scale(1.3);
 }
 
-h1 {
+button {
     font-size: 16px;
-    color: whitesmoke;
+    color: white;
     background-color: #ff9100;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
+    width: 400px;
 }
 
-h1:hover {
+button:hover {
     cursor: pointer;
 }
