Create Character Service and Character Interface

--- a/src/app/adventures/adventures.component.css
+++ b/src/app/adventures/adventures.component.css
@@ -15,7 +15,7 @@
 .textWrapper {
     margin: 20px;
     z-index: 0;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .textWrapper p {
@@ -24,24 +24,11 @@
 
 .imgWrapper img {
     width: 300px;
-    height: 196px;
+    height: 200px;
     object-fit: cover;
 }
 
-.joinBtn {
-    color: silver;
-    font-family: 'IM Fell DW Pica', serif;
-    font-size: 15px;
-    margin-top: 50px;
-    width: 130px;
-    height: 30px;
-    border: 2px solid silver;
-    border-radius: 3px;
-    cursor: pointer;
-    align-self: flex-end;
-    z-index: -1;
-}
-
-.joinBtn:hover {
-    color: black;
+h3 {
+    font-size: 16px;
+    font-style: bold;
 }
