--- a/src/app/character-creator-details/character-creator-details.component.html
+++ b/src/app/character-creator-details/character-creator-details.component.html
@@ -11,7 +11,7 @@
             <label htmlFor="name">Name:</label>
             <input type="text" id="name" name="name" required />
             <label htmlFor="race">Race:</label>
-            <input type="text" id="race" name="race" readOnly />
+            <input type="text" id="race" name="race" value={{race}} />
             <label htmlFor="classDND">Class:</label>
             <select id="classDND" name="classDND" >
                 
