--- a/src/app/realm-select/realm-select.component.html
+++ b/src/app/realm-select/realm-select.component.html
@@ -2,17 +2,11 @@
     <p>Select a Realm to begin your adventure</p>
     <section class="charCreatorRealms">
         <section class="charCreatorRealmsOne">
-            <img
-                src="https://i.imgur.com/Q63VqRV.gif"
-                alt=""
-                class="gif" />
+            <img src="https://i.imgur.com/Q63VqRV.gif" alt="" class="gif" (click)="selectRealm('astarian')"/>
             <p><strong>Astarian</strong></p>
         </section>
         <section class="charCreatorRealmsTwo">
-            <img
-                src="https://i.imgur.com/psnUA8V.gif"
-                alt=""
-                class="gif"/>
+            <img src="https://i.imgur.com/psnUA8V.gif" alt="" class="gif" (click)="selectRealm('irian')"/>
             <p><strong>Irian</strong></p>
         </section>
     </section>
