--- a/src/app/character-creator/character-creator.component.html
+++ b/src/app/character-creator/character-creator.component.html
@@ -1,5 +1,6 @@
 <div>
     <h2>Character Creator</h2>
-    <app-realm-select></app-realm-select>
-    <app-race-select></app-race-select>
+    <app-realm-select (realmSelect)="selectRealm($event)"></app-realm-select>
+    <app-race-select [realm]="realm" (raceSelect)="selectRace($event)"></app-race-select>
+    <app-character-creator-details [race]="race" hidden></app-character-creator-details>
 </div>
