--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -25,7 +25,7 @@ ul {
 li {
     width: 550px;
     padding: 5px;
-    margin: 10px;
+    margin: 8px;
     color: white;
     background-color: #242526;
     border: 1px solid rgb(92, 92, 92);
@@ -35,11 +35,13 @@ li {
 .mapDiv {
     overflow: visible;
     z-index: 1;
+    margin-top: 10px;
 }
 
 .map {
     width: 700px;
     border: 1px solid silver;
+    border-radius: 3px;
     transition: 0.4s;
 }
 
@@ -54,6 +56,7 @@ button {
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
+    margin-top: 10px;
     width: 400px;
 }
 
