--- a/src/app/race-select/race-select.component.css
+++ b/src/app/race-select/race-select.component.css
@@ -1,5 +1,5 @@
 .charCreatorRaces {
-    padding: 10px;
+    padding: 5px;
 }
 
 .charCreatorRaces p {
@@ -11,16 +11,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 900px;
-    height: 380px;
+    margin: 10px;
 }
 
 .raceImg {
     height: 320px;
     width: 210px;
     border-radius: 5px;
-    margin: 10px;
-    margin-top: 0px;
+    margin: 0px 10px;
     object-fit: cover; 
     transition: transform .2s;
     filter: saturate(0);
@@ -43,13 +41,13 @@
 .charCreatorRacesIrian p {
     width: 170px;
     height: 270px;
-    background-color: silver;
-    border: 3px solid grey;
+    background-color: rgb(48, 48, 48);
+    border: 3px solid black;
     border-radius: 5px;
-    color: black;
-    margin: 5px 7px;
-    padding: 5px;
-    font-size: 14.5px;
+    color: white;
+    margin: 5px;
+    padding: 10px;
+    font-size: 13px;
     position: relative;
     z-index: 0;
 }
