--- a/src/app/race-select/race-select.component.html
+++ b/src/app/race-select/race-select.component.html
@@ -1,6 +1,6 @@
 <section class="charCreatorRaces">
     <p>Select a Race</p>
-    <section class="charCreatorRacesAstarian">
+    <section class="charCreatorRacesAstarian" *ngIf="realm === 'astarian'">
         <div>
             <h4>Goliath</h4>
             <p>
@@ -15,11 +15,11 @@
         </div>
 
         <div>
-            <img src="https://i.imgur.com/88IrDbe.jpg" alt="" class="raceImg" />
+            <img src="https://i.imgur.com/88IrDbe.jpg" alt="" class="raceImg" routerLink="/character-creator-details" (click)="selectRace('Goliath')"/>
         </div>
 
         <div>
-            <img src="https://i.imgur.com/VmYg0Zl.jpg" alt="" class="raceImg" />
+            <img src="https://i.imgur.com/VmYg0Zl.jpg" alt="" class="raceImg" routerLink="/character-creator-details" (click)="selectRace('Vampirian')"/>
         </div>
 
         <div>
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <section class="charCreatorRacesIrian">
+    <section class="charCreatorRacesIrian" *ngIf="realm === 'irian'">
         <div>
             <h4>Lumian</h4>
             <p>
@@ -49,11 +49,11 @@
         </div>
 
         <div>
-            <img src="https://i.imgur.com/LeQtQM3.png" alt="" class="raceImg"/>
+            <img src="https://i.imgur.com/LeQtQM3.png" alt="" class="raceImg" routerLink="/character-creator-details" (click)="selectRace('Lumi')"/>
         </div>
 
         <div>
-            <img src="https://i.imgur.com/RRGpfki.png" alt="" class="raceImg" />
+            <img src="https://i.imgur.com/RRGpfki.png" alt="" class="raceImg" routerLink="/character-creator-details" (click)="selectRace('Crystalborn')"/>
         </div>
 
         <div>
