--- a/src/app/character-creator-details/character-creator-details.component.html
+++ b/src/app/character-creator-details/character-creator-details.component.html
@@ -6,54 +6,52 @@
     </section>
 
     "Your character is not saved! Would you like to exit this page?"
-    <form onSubmit={saveCharToDatabase} class="charDetailsForm">
+    <form #formData='ngForm' (ngSubmit)='onSubmit(formData)' class="charDetailsForm">
         <section class="charDetailsSection">
             <label htmlFor="name">Name:</label>
-            <input type="text" id="name" name="name" required />
+            <input type="text" id="name" name="name" [(ngModel)]="character.name" required />
             <label htmlFor="race">Race:</label>
-            <input type="text" id="race" name="race" value={{race}} />
+            <input type="text" id="race" name="race" ngModel="{{race}}"/>
             <label htmlFor="classDND">Class:</label>
-            <select id="classDND" name="classDND" >
-                
+            <select id="classDND" name="classDND" [(ngModel)]="character.classDND">
+                <option>Druid</option>
             </select>
             <label htmlFor="alignment">Alignment:</label>
-            <select id="alignment" name="alignment">
+            <select id="alignment" name="alignment" [(ngModel)]="character.alignment">
                 <option>Chaotic</option>
                 <option>Neutral</option>
                 <option>Lawful</option>
                 <option>Evil</option>
             </select>
             <label htmlFor="imageUrl">ImageURL:</label>
-            <input type="text" id="imageUrl" name="imageUrl" required />
+            <input type="text" id="imageUrl" name="imageUrl" required [(ngModel)]="character.imageUrl"/>
         </section>
 
         <section class="charDetailsSection">
             <label htmlFor="str">Strength:</label>
-            <input type="number" id="str" name="str" required />
+            <input type="number" id="str" name="str" required [(ngModel)]="character.str"/>
             <label htmlFor="dex">Dexterity:</label>
-            <input type="number" id="dex" name="dex" required />
+            <input type="number" id="dex" name="dex" required [(ngModel)]="character.dex"/>
             <label htmlFor="con">Constitution:</label>
-            <input type="number" id="con" name="con" required />
+            <input type="number" id="con" name="con" required [(ngModel)]="character.con"/>
             <label htmlFor="int">Intelligence:</label>
-            <input type="number" id="int" name="int" required />
+            <input type="number" id="int" name="int" required [(ngModel)]="character.int"/>
             <label htmlFor="wis">Wisdom:</label>
-            <input type="number" id="wis" name="wis" required />
+            <input type="number" id="wis" name="wis" required [(ngModel)]="character.wis"/>
             <label htmlFor="cha">Charisma:</label>
-            <input type="number" id="cha" name="cha" required />
+            <input type="number" id="cha" name="cha" required [(ngModel)]="character.cha"/>
         </section>
 
         <section class="charDetailsSection">
             <label htmlFor="desc">Description:</label>
-            <textarea type="text" id="desc" name="desc" rows="4" required></textarea>
+            <textarea type="text" id="desc" name="desc" rows="4" required [(ngModel)]="character.desc"></textarea>
             <label htmlFor="features">Features & Traits:</label>
-            <textarea type="text" id="features" name="features" rows="4" required></textarea>
+            <textarea type="text" id="features" name="features" rows="4" required [(ngModel)]="character.features"></textarea>
         </section>
 
         <section class="charDetailsButtons">
-            <input type="button" id="rollbtn" name="rollbtn" class="rollButton" />
-            <label htmlFor="rollbtn">Roll Attributes</label>
-            <input type="submit" id="savebtn" name="savebtn" class="saveButton" />
-            <label htmlFor="savebtn">Save Character</label>
+            <input type="button" id="rollbtn" name="rollbtn" class="rollButton" value="Roll Attributes" />
+            <input type="submit" id="savebtn" name="savebtn" class="saveButton" value="Save Character"/>
         </section>
     </form>
 </main>
