My Characters Component
View created characters and delete functionality

--- a/src/app/character-creator-details/character-creator-details.component.css
+++ b/src/app/character-creator-details/character-creator-details.component.css
@@ -71,9 +71,12 @@ select {
     margin: 30px !important;
 }
 
-
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
 }
+
+input[type=number] {
+    -moz-appearance: textfield;
+  }
