--- a/src/app/character-creator-details/character-creator-details.component.html
+++ b/src/app/character-creator-details/character-creator-details.component.html
@@ -5,6 +5,8 @@
         <h4>Details</h4>
     </section>
 
+    <p>Race: {{race}}</p>
+
     "Your character is not saved! Would you like to exit this page?"
     <form #formData='ngForm' (ngSubmit)='onSubmit(formData)' class="charDetailsForm">
         <section class="charDetailsSection">
