--- a/src/app/character-creator/character-creator.component.html
+++ b/src/app/character-creator/character-creator.component.html
@@ -2,5 +2,5 @@
     <h2>Character Creator</h2>
     <app-realm-select (realmSelect)="selectRealm($event)"></app-realm-select>
     <app-race-select [realm]="realm" (raceSelect)="selectRace($event)"></app-race-select>
-    <app-character-creator-details [race]="race" hidden></app-character-creator-details>
+    <app-character-creator-details [race]="race" ></app-character-creator-details>
 </div>
