--- a/src/app/my-characters/my-characters.component.css
+++ b/src/app/my-characters/my-characters.component.css
@@ -1,17 +1,18 @@
 .printBtn {
     position: relative;
-    margin: 40px 750px;
+    margin: 10px 750px;
     width: 200px;
     height: 30px;
 }
 
 .myProfileDiv {
-    color: silver;
+    color: rgb(37, 37, 37);
+    background-color: rgb(230, 227, 227);
     width: 750px;
     height: 300px;
     display: flex;
     flex-direction: column;
-    border: 2px solid silver;
+    border: 2px solid black;
     border-radius: 3px;
     margin: 20px auto;
 }
@@ -24,48 +25,48 @@
 
 .charTextWrapper {
     width: 190px;
-    margin: 20px;
+    margin: 10px;
     z-index: 0;
 }
 .charTextWrapper p {
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .charImgWrapper img {
     width: 250px;
     height: 160px;
-    margin: 20px;
+    margin: 5px;
     object-fit: cover;
     object-position: 50% 30%;
     border-radius: 3px;
 }
 
 .attributesLiWrapper {
-    margin: 20px 40px;
+    margin: 5px 20px;
     width: 250px;
 }
 
 .charDetailsWrapper {
     display: flex;
+    font-size: 12px;
 }
 
 .charDetailsWrapper p {
     width: 400px;
-    margin: 20px;
+    margin: 0px 10px;
 }
 
 .btn {
-    font-family: 'IM Fell DW Pica', serif;
-    font-size: 15px;
-    margin-top: 20px;
-    margin-right: 20px;
-    width: 130px;
+    position: relative;
+    bottom: 150px;
+    left: 620px;
+    font-size: 14px;
+    width: 120px;
     height: 30px;
     border: 2px solid silver;
     border-radius: 3px;
     cursor: pointer;
     align-self: flex-end;
-    z-index: -1;
 }
 
 .btn:hover {
@@ -73,7 +74,5 @@
 }
 
 @media print {
-    .myProfileDiv {
-        background-color: black;
-    }
+
 }
