--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -46,20 +46,26 @@ li {
 }
 
 .map:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
 }
 
 button {
     font-size: 16px;
     color: white;
-    background-color: #ff9100;
+    background-color: #ff9100 !important;
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
     margin-top: 10px;
-    width: 400px;
+    width: 300px;
+    background:
+    radial-gradient(farthest-side, transparent calc(100% - 150px), #006eff 0) 
+    center /var(--d, 600px) var(--d, 600px) no-repeat;
+    transition: 0.5s;
 }
 
 button:hover {
     cursor: pointer;
+    background-color: #006eff;
+    --d: 300px;
 }
